--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "graphql-yoga": "^1.18.3"
+    "graphql-yoga": "^1.18.3",
+    "node-fetch": "^2.6.1",
+    "node-nlp": "^4.15.0"
   },
   "devDependencies": {
-    "node-fetch": "^2.6.1",
     "nodemon": "^2.0.4"
   },
   "scripts": {
